# am-platform

./: .code-intelligence.yaml  .dockerignore  .env.example  .gitignore  .gitnexusrc  README.md  docker-compose.yml  langfuse-default-values.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: am-identity.yml  am-mcp-gateway.yml  am-notification.yml  am-subscription.yml  ci.yml  debug-logs.yml  deploy-am-identity.yml  deploy-am-mcp-gateway.yml  deploy-am-notification.yml  deploy-am-subscription.yml
am-identity/: .am.yaml  Dockerfile  README.md  observability.yaml  package.json  pyproject.toml  spt.yaml
am-identity/am_identity/: deps.py  main.py
am-identity/am_identity/api/: admin_router.py  auth_router.py  internal_router.py  user_router.py
am-identity/am_identity/core/: config.py  kafka.py
am-identity/am_identity/email/: __init__.py  rate_limit.py  smtp_client.py  templates.py  tokens.py
am-identity/am_identity/providers/: interface.py  keycloak_provider.py
am-identity/am_identity/schemas/: admin.py  auth.py  user.py
am-identity/helm/: values.dev.yaml  values.preprod.yaml  values.prod.yaml  values.yaml  vault-mappings.yaml
am-identity/postman/: AM-Identity.local.postman_environment.json  AM-Identity.postman_collection.json  README.md
am-identity/scripts/: e2e_ssd2658_mail_admin.py  verify_preprod_identity.py
am-mcp-gateway/: .env.preprod  .gitignore  Dockerfile  Makefile  README.md  package.json  requirements-dev.txt  requirements.txt  test_auth_flow.py
am-mcp-gateway/app/: config.py  main.py
am-mcp-gateway/helm/: values.dev.yaml  values.preprod.yaml  values.prod.yaml  values.yaml  vault-mappings.yaml
am-mcp-gateway/postman/: AM-MCP-Gateway.local.postman_environment.json  AM-MCP-Gateway.postman_collection.json
am-mcp-gateway/tests/: conftest.py  (+3 more)
am-notification/: .am.yaml  Dockerfile  README.md  observability.yaml  package.json  pyproject.toml  spt.yaml
am-notification/am_notification/: deps.py  main.py  plane_a.py
am-notification/am_notification/api/: internal_router.py  notification_router.py  preference_router.py  webhook_router.py
am-notification/am_notification/core/: config.py  database.py  log_utils.py
am-notification/am_notification/providers/: interface.py  novu_provider.py
am-notification/am_notification/schemas/: notification.py
am-notification/am_notification/services/: dedupe_service.py  event_mapping.py  kafka_consumer.py  notification_service.py  preference_service.py
am-notification/helm/: values.dev.yaml  values.preprod.yaml  values.prod.yaml  values.yaml  vault-mappings.yaml
am-notification/postman/: AM-Notification.local.postman_environment.json  AM-Notification.postman_collection.json  README.md
am-subscription/: .am.yaml  Dockerfile  README.md  observability.yaml  package.json  pyproject.toml  spt.yaml
am-subscription/am_subscription/: __init__.py  deps.py  main.py
am-subscription/am_subscription/api/: internal_router.py  plans_router.py  subscription_router.py  webhook_router.py
am-subscription/am_subscription/core/: config.py  database.py  log_utils.py  plan_catalog.py  state_machine.py
am-subscription/am_subscription/models/: db.py
am-subscription/am_subscription/providers/: interface.py  lago_provider.py
am-subscription/am_subscription/schemas/: entitlement.py  meter.py  subscription.py
am-subscription/am_subscription/services/: entitlement_service.py  event_publisher.py  kafka_consumer.py  subscription_service.py
am-subscription/helm/: values.dev.yaml  values.preprod.yaml  values.prod.yaml  values.yaml  vault-mappings.yaml
am-subscription/postman/: AM-Subscription.local.postman_environment.json  AM-Subscription.postman_collection.json  README.md
am-subscription/tests/: test_state_machine.py  test_webhook_sync.py
automation/: package.json
docker/: python-base.Dockerfile
docs/: AM_AI_PLATFORM_DESIGN.md  AM_AI_PLATFORM_PLAN.md  AM_MCP_GATEWAY_DESIGN.md  AM_UI_TEST_AGENT_DESIGN.md  README.md  critical_high_gap_resolution.md  implementation_plan.md  keycloak-realm-guide.md  npm-scripts.md  openapi_standards.md  plan_identity.md  plan_notification.md  plan_payments.md  plan_subscription.md  system_design_review.md  task.md
e2e/: README.md  package.json  playwright.config.ts
helm/: README.md
libraries/am-platform-common/: package.json  pyproject.toml
libraries/am-platform-common/am_platform_common/: __init__.py  errors.py  http_client.py  logging.py  middleware.py  models.py  setup.py
libraries/am-platform-common/tests/: test_common.py
libraries/am-platform-security/: package.json  pyproject.toml
libraries/am-platform-security/am_platform_security/: __init__.py  config.py  dependencies.py  middleware.py  models.py  setup.py  validator.py
libraries/am-platform-security/tests/: test_security.py
logs/: README.md
postman/: AM-Platform.local.postman_environment.json  AM-Platform.postman_collection.json  AM-Platform.preprod.postman_environment.json  README.md  build_platform_postman.py  environment.defaults.json
(+122 files in other folders)
