[project]
name = "am-identity"
version = "0.1.0"
description = "Unified Keycloak-backed identity service for AM Platform"
authors = [{ name = "Antigravity Agent", email = "agent@google.com" }]
requires-python = ">=3.11"
dependencies = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-asgi>=0.45b0",
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.0.0",
    "am-platform-common",
    "am-platform-security",
]

[tool.poetry]
packages = [
    { include = "am_identity" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
