[project]
name = "am-subscription"
version = "0.1.0"
description = "Subscription lifecycle, entitlements, and metering for AM Platform"
authors = [{ name = "AM Platform", email = "platform@asrax.in" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "am-platform-common",
    "am-platform-security",
    "aiokafka>=0.10.0",
]

[tool.poetry]
packages = [{ include = "am_subscription" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
