[project]
name = "am-platform-common"
version = "0.1.0"
description = "Shared Python DTOs, utilities, and JSON logging for AM Platform"
authors = [{ name = "Antigravity Agent", email = "agent@google.com" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
]

[tool.poetry]
packages = [
    { include = "am_platform_common" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
